fix: month/year alignment

--- a/src/common/scss/shidoka-flatpickr-theme.scss
+++ b/src/common/scss/shidoka-flatpickr-theme.scss
@@ -35,7 +35,7 @@ $calendar-box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.08),
     &.rangeMode .flatpickr-months .flatpickr-month {
         &:first-of-type {
             .flatpickr-current-month {
-                left: 8%;
+                left: 6%;
             }
         }
 
